; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/mmu/extr_vmm.c_nvkm_vmm_map.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/mmu/extr_vmm.c_nvkm_vmm_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_vmm = type { i32 }
%struct.nvkm_vma = type { i32 }
%struct.nvkm_vmm_map = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nvkm_vmm_map(%struct.nvkm_vmm* %0, %struct.nvkm_vma* %1, i8* %2, i32 %3, %struct.nvkm_vmm_map* %4) #0 {
  %6 = alloca %struct.nvkm_vmm*, align 8
  %7 = alloca %struct.nvkm_vma*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.nvkm_vmm_map*, align 8
  %11 = alloca i32, align 4
  store %struct.nvkm_vmm* %0, %struct.nvkm_vmm** %6, align 8
  store %struct.nvkm_vma* %1, %struct.nvkm_vma** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store %struct.nvkm_vmm_map* %4, %struct.nvkm_vmm_map** %10, align 8
  %12 = load %struct.nvkm_vmm*, %struct.nvkm_vmm** %6, align 8
  %13 = getelementptr inbounds %struct.nvkm_vmm, %struct.nvkm_vmm* %12, i32 0, i32 0
  %14 = call i32 @mutex_lock(i32* %13)
  %15 = load %struct.nvkm_vmm*, %struct.nvkm_vmm** %6, align 8
  %16 = load %struct.nvkm_vma*, %struct.nvkm_vma** %7, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = load i32, i32* %9, align 4
  %19 = load %struct.nvkm_vmm_map*, %struct.nvkm_vmm_map** %10, align 8
  %20 = call i32 @nvkm_vmm_map_locked(%struct.nvkm_vmm* %15, %struct.nvkm_vma* %16, i8* %17, i32 %18, %struct.nvkm_vmm_map* %19)
  store i32 %20, i32* %11, align 4
  %21 = load %struct.nvkm_vma*, %struct.nvkm_vma** %7, align 8
  %22 = getelementptr inbounds %struct.nvkm_vma, %struct.nvkm_vma* %21, i32 0, i32 0
  store i32 0, i32* %22, align 4
  %23 = load %struct.nvkm_vmm*, %struct.nvkm_vmm** %6, align 8
  %24 = getelementptr inbounds %struct.nvkm_vmm, %struct.nvkm_vmm* %23, i32 0, i32 0
  %25 = call i32 @mutex_unlock(i32* %24)
  %26 = load i32, i32* %11, align 4
  ret i32 %26
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @nvkm_vmm_map_locked(%struct.nvkm_vmm*, %struct.nvkm_vma*, i8*, i32, %struct.nvkm_vmm_map*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
